--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>Adex</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link href="https://surveyjs.azureedge.net/1.7.28/survey.css" type="text/css" rel="stylesheet" />
     <meta
             name="viewport"
             content="minimum-scale=1, initial-scale=1, width=device-width"
